fix timer spacing

--- a/style.css
+++ b/style.css
@@ -497,7 +497,7 @@ footer {
     margin: 0 auto;
     display: inline-block;
     padding: auto auto;
-    font-size: 1.25em;
+    font-size: 1.1em;
     color:#292929;
     text-align: left;
   }
